--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,31 @@ header {
   padding-top: 50px;
   position: relative;
 }
+.minion {
+  width: 75px;
+  left: 250px;
+  /* position: absolute; */
+  animation: bounce 1.5s ease-out 4s infinite;
+  z-index: 1;
+}
+
+@keyframes bounce {
+  0% {
+    top: 50px;
+  }
+  50% {
+    top: 130px;
+  }
+  100% {
+    top: 50px;
+  }
+}
+
 .profile-img {
+  /* position: absolute; */
   border-radius: 6px;
   width: 10px;
+  z-index: 2;
 }
 header h1,
 header h2 {
@@ -119,17 +141,44 @@ nav a {
   text-transform: uppercase;
   font-weight: 700;
   color: #3a549b;
+  transition: all 1s;
+}
+
+nav a:hover {
+  background: #3a549b;
+  color: white;
 }
 
 /* Work Experience */
+/* .ball {
+  width: 50px;
+  height: 50px;
+  background-color: lightblue;
+  position: absolute;
+  border-radius: 50%;
+  animation: bounce 1.5s ease-out 1s infinite;
+}
+@keyframes bounce {
+  0% {
+    top: 0px;
+  }
+  50% {
+    top: 300px;
+    background-color: red;
+  }
+  100% {
+    top: 0px;
+  }
+} */
+
 .work {
   background: #d3d0cb;
-  background: linear-gradient(
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.5)
     ),
     url("../images/nature3.jpg") no-repeat fixed;
-  background-size: cover;
+  background-size: cover; */
   /* User overflow: auto; to have scroll bar for long text. Maybe add like an arrow button to expand everything */
 }
 h3 ~ p {
